# regtech-user-fi-management

./: Dockerfile  Dockerfile.mac_chip  README.md  data.json  pyproject.toml
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/workflows/: build.yml  linters.yml  tests.yml
db_revisions/: env.py  utils.py
db_revisions/feed/: address_state.csv  federal_regulator.csv  hmda_institution_type.csv  sbl_institution_type.csv
db_revisions/versions/: 045aa502e050_update_financial_institutions_table.py  0e520c01fb42_update_tax_id_to_10_characters.py  1f6c33f20a2e_create_address_state_table.py  20e0d51d8be9_create_financial_institution_domains.py  20e0d51d8be9_create_financial_institution_domains_.py  26a742d97ad9_feed_federal_regulator_table.py  26a742d97ad9_seed_federal_regulator_table.py  329c70502325_240131_fi_history_table.py  383ab402c8c2_231227_add_active_field_to_institutions.py  3f893e52d05c_240130_add_version.py  549c612bf1c9_create_federal_regulator_table.py  56ef0b5cd2d4_create_sbl_institution_type_table.py  6826f05140cd_240111_add_free_form_text_for_sbl_types.py  6dd77f09fae6_add_char_limit_to_financial_institution_.py  7b6ff51002b5_feed_address_state_table.py  7b6ff51002b5_seed_address_state_table.py  8106d83ff594_240131_fi_type_association_history_table.py  8b1ba6a3275b_create_hmda_institution_type_table.py  README  a41281b1e109_feed_sbl_institution_type_table.py  a41281b1e109_seed_sbl_institution_type_table.py  a98b11074c54_create_denied_domains_table.py  ada681e1877f_create_fi_to_type_mapping_table.py  f4ff7d1aa6df_feed_hmda_institution_type_table.py  f4ff7d1aa6df_seed_hmda_institution_type_table.py  f76c5004993f_create_financial_institutions_table.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_248a9614ea305b19___init___py.html  z_248a9614ea305b19_admin_py.html  z_248a9614ea305b19_institutions_py.html  z_26d79a5c28069cb1_engine_py.html  z_4932111ee33b60b6_listeners_py.html  z_8eaaa37a3d202aee_institutions_repo_py.html  z_8eaaa37a3d202aee_repo_utils_py.html  z_a576a7a362b4f7b1_config_py.html  z_a576a7a362b4f7b1_dependencies_py.html  z_a576a7a362b4f7b1_main_py.html  z_bcebeddd9b590a63_dao_py.html  z_bcebeddd9b590a63_dto_py.html
src/: .env.local  .env.template  config.py  dependencies.py  env.py  main.py
src/db/: __init__.py  dao.py  database.py  dto.py
src/db/repo/: institutions_repo.py
src/entities/: listeners.py
src/entities/engine/: __init__.py  engine.py
src/entities/models/: __init__.py  dao.py  dto.py
src/entities/repos/: institutions_repo.py  repo_utils.py
src/oauth2/: __init__.py  oauth2_admin.py  oauth2_backend.py
src/regtech_user_fi_management/: config.py  dependencies.py  main.py
src/regtech_user_fi_management/entities/: listeners.py
src/regtech_user_fi_management/entities/engine/: engine.py
src/regtech_user_fi_management/entities/models/: dao.py  dto.py
src/regtech_user_fi_management/entities/repos/: institutions_repo.py  repo_utils.py
src/regtech_user_fi_management/routers/: admin.py  institutions.py
src/routers/: __init__.py  admin.py  institutions.py
src/util/: __init__.py  router_wrapper.py
tests/api/: conftest.py
tests/api/routers/: test_admin_api.py  test_institutions_api.py
tests/app/: conftest.py  test_config.py  test_dependencies.py
tests/db/: conftest.py  test_institutions.py
tests/entities/: conftest.py  test_listeners.py
tests/entities/repos/: test_institutions_repo.py
tests/migrations/: conftest.py  test_lookup_tables_data_feed.py  test_lookup_tables_data_seed.py  test_migrations.py  test_schema.py
