[tool.poetry]
name = "user-fi-management"
version = "0.1.0"
description = ""
authors = ["lchen-2101 <73617864+lchen-2101@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "user_fi_management"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
python-keycloak = "^3.0.0"
SQLAlchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
python-jose = "^3.3.0"
requests = "^2.31.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
