[tool.poetry]
name = "regtech-user-fi-management"
version = "0.1.0"
description = ""
authors = ["lchen-2101 <73617864+lchen-2101@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "regtech-user-fi-management" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
python-keycloak = "^3.0.0"
SQLAlchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
python-jose = "^3.3.0"
requests = "^2.31.0"
asyncpg = "^0.27.0"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
httpx = "^0.24.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
